# fibonacci_encoding

./: .gitignore  Analyse.cpp  CMakeLists.txt  Compress.cxx  README.md  Timing.hpp
